--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,26 @@
                             },
                             {
                                 "glob": "**/*",
+                                "input": "src/assets",
+                                "output": "assets"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "node_modules/@taiga-ui/icons/src",
+                                "output": "assets/taiga-ui/icons"
+                            },
+                            {
+                                "glob": "**/*",
                                 "input": "node_modules/@taiga-ui/icons/src",
                                 "output": "assets/taiga-ui/icons"
                             }
                         ],
                         "styles": [
                             "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
+                            "node_modules/@taiga-ui/styles/taiga-ui-global.less",
                             "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+                            "src/styles/design-tokens.css",
+                            "src/styles/taiga-ui-custom.less",
                             "src/styles.css"
                         ],
                         "server": "src/main.server.ts",
