--- a/package.json
+++ b/package.json
@@ -27,50 +27,67 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/cdk": "^20.2.12",
-        "@angular/common": "^20.3.10",
-        "@angular/compiler": "^20.3.10",
-        "@angular/core": "^20.3.10",
-        "@angular/forms": "^20.3.10",
-        "@angular/platform-browser": "^20.3.10",
-        "@angular/platform-server": "^20.3.10",
-        "@angular/router": "^20.3.10",
-        "@angular/service-worker": "^20.3.10",
-        "@angular/ssr": "^20.3.9",
-        "@ng-web-apis/universal": "^4.12.2",
-        "@taiga-ui/addon-charts": "^4.60.0",
-        "@taiga-ui/addon-commerce": "^4.60.0",
-        "@taiga-ui/addon-doc": "^4.60.0",
-        "@taiga-ui/addon-mobile": "^4.60.0",
-        "@taiga-ui/addon-table": "^4.60.0",
-        "@taiga-ui/cdk": "^4.60.0",
-        "@taiga-ui/core": "^4.60.0",
+        "@angular/animations": "~20.3.16",
+        "@angular/cdk": "~20.2.14",
+        "@angular/common": "~20.3.16",
+        "@angular/compiler": "~20.3.16",
+        "@angular/core": "~20.3.16",
+        "@angular/forms": "~20.3.16",
+        "@angular/platform-browser": "~20.3.16",
+        "@angular/platform-server": "~20.3.16",
+        "@angular/router": "~20.3.16",
+        "@angular/service-worker": "~20.3.16",
+        "@angular/ssr": "~20.3.14",
+        "@maskito/angular": "^3.11.1",
+        "@maskito/core": "^3.11.1",
+        "@maskito/kit": "^3.11.1",
+        "@ng-web-apis/common": "^4.14.0",
+        "@ng-web-apis/intersection-observer": "^4.14.0",
+        "@ng-web-apis/mutation-observer": "^4.14.0",
+        "@ng-web-apis/platform": "^4.14.0",
+        "@ng-web-apis/resize-observer": "^4.14.0",
+        "@ng-web-apis/screen-orientation": "^4.14.0",
+        "@ng-web-apis/universal": "^4.14.0",
+        "@taiga-ui/addon-charts": "^4.66.0",
+        "@taiga-ui/addon-commerce": "^4.66.0",
+        "@taiga-ui/addon-doc": "^4.66.0",
+        "@taiga-ui/addon-mobile": "^4.66.0",
+        "@taiga-ui/addon-table": "^4.66.0",
+        "@taiga-ui/cdk": "^4.66.0",
+        "@taiga-ui/core": "^4.66.0",
         "@taiga-ui/event-plugins": "^4.7.0",
-        "@taiga-ui/icons": "^4.60.0",
-        "@taiga-ui/kit": "^4.60.0",
-        "@taiga-ui/layout": "^4.60.0",
-        "express": "^5.1.0",
+        "@taiga-ui/i18n": "^4.66.0",
+        "@taiga-ui/icons": "^4.66.0",
+        "@taiga-ui/kit": "^4.66.0",
+        "@taiga-ui/layout": "^4.66.0",
+        "@taiga-ui/polymorpheus": "^4.9.0",
+        "@taiga-ui/styles": "^4.66.0",
+        "express": "^5.2.1",
+        "jwt-decode": "^4.0.0",
+        "libphonenumber-js": "^1.12.33",
+        "ngx-cookie-service": "^20.1.0",
         "rxjs": "~7.8.2",
         "tslib": "^2.8.1",
         "zone.js": "~0.15.1"
     },
     "devDependencies": {
-        "@angular/build": "^20.3.9",
-        "@angular/cli": "^20.3.9",
-        "@angular/compiler-cli": "^20.3.10",
-        "@types/express": "^5.0.5",
-        "@types/jasmine": "~5.1.12",
-        "@types/node": "^24.10.0",
+        "@angular/build": "~20.3.14",
+        "@angular/cli": "~20.3.14",
+        "@angular/compiler-cli": "~20.3.16",
+        "@types/express": "^5.0.6",
+        "@types/jasmine": "~5.1.13",
+        "@types/node": "^24.10.4",
         "angular-eslint": "20.5.1",
-        "eslint": "^9.39.1",
+        "baseline-browser-mapping": "^2.9.12",
+        "eslint": "^9.39.2",
         "jasmine-core": "~5.12.1",
         "karma": "~6.4.4",
         "karma-chrome-launcher": "~3.2.0",
         "karma-coverage": "~2.2.1",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
-        "less": "^4.4.2",
+        "less": "^4.5.1",
         "typescript": "~5.9.3",
-        "typescript-eslint": "8.46.3"
+        "typescript-eslint": "~8.46.3"
     }
 }
