--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@taiga-ui/layout": "^4.66.0",
         "@taiga-ui/polymorpheus": "^4.9.0",
         "@taiga-ui/styles": "^4.66.0",
+        "crypto-js": "^4.2.0",
         "express": "^5.2.1",
         "jwt-decode": "^4.0.0",
         "libphonenumber-js": "^1.12.33",
@@ -74,6 +75,7 @@
         "@angular/build": "~20.3.14",
         "@angular/cli": "~20.3.14",
         "@angular/compiler-cli": "~20.3.16",
+        "@types/crypto-js": "^4.2.2",
         "@types/express": "^5.0.6",
         "@types/jasmine": "~5.1.13",
         "@types/node": "^24.10.4",
